<resources>
    <string name="app_name">News Movie</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="search_movie">Cari Movie</string>
    <string name="scroll_to_top">Scroll to Top</string>
    <string name="message">Tidak ada Movie Tersimpan</string>
    <string name="navigate_back">Back</string>
    <string name="detail">Detail</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="data_movie">Data Movie</string>
    <string name="movie_title">Judul Movie: %s</string>
    <string name="year">Dirilis pada Tahun: %s</string>
    <string name="runtime">Durasi: %s</string>
    <string name="back_to_home">Back</string>
    <string name="name">Usmar Manalu</string>
    <string name="email">usmarmnl99@gmail.com</string>
    <string name="empty_list">Data Movie kosong</string>
    <string name="sukses">Sukses tersimpan</string>
    <string name="gagal">Sukses dihapus</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="matrix">Matrix</string>
    <string name="mowgli">Mowgli</string>
    <string name="doctor_strange">Doctor Strange</string>
    <string name="john_wick">John Wick</string>
    <string name="schindelers_list">Schindelers List</string>
    <string name="lord_of_the_rings">Lord Of The Rings</string>
    <string name="pulp_fiction">Pulp Fiction</string>
    <string name="clint_east_wood">Clint East Wood</string>
    <string name="joker">Joker</string>
    <string name="fight_club">Fight Club</string>
    <string name="category">Category Movie</string>
</resources>